# ai-page-builder

./: .dockerignore  .env.example  .gitignore  .gitmodules  CLAUDE.md  Dockerfile  LICENSE  README.md  SECURITY.md  Taskfile.yml  alembic.ini  docker-compose.yml  local.env.example  main.py  nginx.conf  prod.env.example  pyproject.toml
app/: admin.py  models.py
app/core/: __init__.py  access_control.py  auth_backend.py  config.py  config_redis.py  db.py  db_mongo.py  exceptions.py  logger.py  permissions.py
app/products/page_builder/: models.py  router.py
app/products/page_builder/config/: auth_hooks.py  aws.py  gcp.py  plans.py  shutterstock.py
app/products/page_builder/utils/: html_processor.py
app/shared/: models.py  router.py
app/shared/commands/: create_superuser.py  set_credits_zero.py  setup_stripe_products.py
app/shared/config/: auth.py  credits.py  payments.py
app/shared/controllers/analytics/: analytics.py  product_analytics.py
app/shared/controllers/articles/: article.py
app/shared/controllers/auth/: auth.py
app/shared/controllers/connectors/: nango.py
app/shared/controllers/integrations/: integrations.py
app/shared/controllers/payments/: credits.py  payments.py  plans.py  upgrades.py
app/shared/controllers/support/: contact_support.py
app/shared/schemas/articles/: article.py
app/shared/schemas/auth/: auth.py  user.py
app/shared/schemas/connectors/: nango.py
app/shared/schemas/payments/: credits.py  payment.py
app/shared/utils/: dataclass_serialization.py  helpers.py  send_email.py  sendgrid_email.py  user_helpers.py
app/templates/: payment_analytics.html  user_insights.html
docs/: architecture.md  usage.md
frontend/: README.md  eslint.config.js  index.html  package-lock.json  package.json  rebuild-puck.sh  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/public/: robots.txt  sitemap.xml
frontend/src/: App.css  App.test.tsx  App.tsx  index.css  main.tsx  test-setup.ts
frontend/src/client/: index.ts
frontend/src/config/: api.ts  connectorRegistry.ts  credits.ts  env.ts  landingPage.ts  smbConfig.ts
frontend/src/context/: SignUpDialogContext.tsx  SnackBarContext.tsx
frontend/src/hooks/: index.ts  useErrorHandler.ts  useIsVisible.ts  useLoginForm.ts  useSignUpForm.ts
frontend/src/services/: autopop.ts  createsitespec.ts
frontend/src/streaming/: index.ts
frontend/src/theme/: AppTheme.tsx  getTheme.tsx  themePrimitives.ts
frontend/src/types/: editor.ts  generationMetrics.ts  media.ts  smbRecommendation.ts  template.ts  templateRecommendation.ts  vite-env.d.ts
frontend/src/utils/: billingReturnStorage.ts  citationUtils.ts  createSiteStorage.ts  errorHandler.test.ts  errorHandler.ts  generationErrorDisplay.ts  mediaUtil.ts  notification.ts  productAnalytics.ts  smbTestStorage.ts
migrations/: env.py
migrations/versions/: 01aff4b7d352_change_size_bytes_to_bigint.py  02b_add_ingestion_sync_statuses.py  67d116028783_add_sessions_table.py  92e3d4a1a553_add_session_id_to_conversations.py  a1b2c3d4e5f6_add_preview_link_to_generation_versions.py  c7dbc495d092_fresh_db_migrations.py  e1ad7ed5d633_add_chat_models.py  f3a8b1c2d4e5_add_nango_connection_and_synced_document.py
orchestration_service/: README.md  config.py  main.py  pyproject.toml
orchestration_service/routers/: health.py  workflows.py
orchestration_service/schemas/: media_schemas.py  workflow_schemas.py
orchestration_service/services/: landing_page_workflow_service.py  media_service.py
orchestration_service/utils/: __init__.py  dataclass_serialization.py
postgres/databases/: pagebuilder.sql
taskfiles/: backend.yml  database.yml  deployment.yml  frontend.yml  orchestration.yml  payments.yml  quality.yml  ui.yml
tests/: __init__.py  conftest.py
tests/integration/: test_api.py
tests/shared/: test_config.py  test_models.py
tests/shared/auth/: test_auth_controller.py  test_user_model.py  test_users_service.py
tests/shared/payments/: test_credits.py  test_payments.py  test_plan_quota_update.py
(+660 files in other folders)
